--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A fully mocked and test-friendly version of react native",
   "main": "build/react-native.js",
   "scripts": {
-    "prepublish": "npm run build",
+    "postinstall": "npm run build",
     "test": "npm run lint && npm run mocha",
     "mocha": "mocha --require babel-core/register 'test/**/*.js'",
     "mocha:watch": "npm run test -- --watch",
